enhanced swagger.yaml for playlist and added backend code and tests (2 still failing)
